--- a/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/home/header/header.component.html
+++ b/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/home/header/header.component.html
@@ -17,6 +17,7 @@
         <li class="animationTop delay-03"><a routerLink="/">TRANG CHỦ</a></li>
         <li class="animationTop delay-05"><a routerLink="/student">HỌC SINH</a></li>
         <li class="animationTop delay-07"><a routerLink="/teacher">GIÁO VIÊN</a></li>
+        <li class="animationTop delay-07"><a routerLink="/teacher">LỚP HỌC</a></li>
         <li class="animationTop delay-09"><a routerLink="/timetable">THỜI KHÓA BIỂU</a></li>
 <li class="animationTop delay-1">
     <div>
