--- a/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/home/header/header.component.html
+++ b/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/home/header/header.component.html
@@ -18,7 +18,9 @@
         <li class="animationTop delay-05"><a routerLink="/student">HỌC SINH</a></li>
         <li class="animationTop delay-07"><a routerLink="/teacher">GIÁO VIÊN</a></li>
         <li class="animationTop delay-07"><a routerLink="/teacher">LỚP HỌC</a></li>
+        <li class="animationTop delay-07"><a routerLink="/student/homeroom">LỚP CHỦ NHIỆM</a></li>
         <li class="animationTop delay-09"><a routerLink="/timetable">THỜI KHÓA BIỂU</a></li>
+        <li class="animationTop delay-09"><a routerLink="/timetable/timetable-teacher">LỊCH DẠY</a></li>
 <li class="animationTop delay-1">
     <div>
       <div class="dropdown">
@@ -26,6 +28,7 @@
           <i class="fa-sharp fa-solid fa-user" style="width: 70px; height: 35px; padding-top: 10px"></i>
         </button>
         <ul class="dropdown-menu dropdown-menu-end" style="background-color: #f44336; cursor: pointer">
+          <li><a class="dropdown"><i class="fa-sharp fa-solid fa-key" ></i> Sửa thông tin cá nhân</a></li>
           <li><a class="dropdown"><i class="fa-sharp fa-solid fa-key" ></i> Sửa mật khẩu</a></li>
           <li><a class="dropdown" data-bs-toggle="modal" data-bs-target="#logout"><i class="fa-sharp fa-solid fa-right-to-bracket"></i> Đăng xuất</a></li>
         </ul>
