--- a/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/student/homeroom-class/homeroom-class.component.html
+++ b/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/student/homeroom-class/homeroom-class.component.html
@@ -1,9 +1,9 @@
 
-<body style="background-color: #ECECEC">
+<body style="background-color: #ECECEC; height: 100vh">
 <div class="justify-content-center m-0 mb-2">
   <div>
     <div>
-      <h1 style="size:32px; margin-bottom: 2rem; margin-top: 2rem; text-align: center">DANH SÁCH HỌC SINH LỚP
+      <h1 style="size:32px; margin-bottom: 2rem; padding-top: 6rem; text-align: center">DANH SÁCH HỌC SINH LỚP
         1A</h1>
     </div>
     <div>
