--- a/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/timetable/timetable-teacher/timetable-teacher.component.html
+++ b/FE/Primery_School_FE/C0822G1-primaryschool-FE/src/app/timetable/timetable-teacher/timetable-teacher.component.html
@@ -1,9 +1,9 @@
 
-<body style="background-color: #ECECEC">
+<body style="background-color: #ECECEC; height: 100vh">
 <div class="justify-content-center m-0 mb-2">
   <div>
     <div>
-      <h1 style="size:32px; margin-top: 50px; margin-bottom: 30px; text-align: center">LỊCH DẠY</h1>
+      <h1 style="size:32px; padding-top: 6rem; margin-bottom: 30px; text-align: center">LỊCH DẠY</h1>
     </div>
     <div>
       <div class="col-2"></div>
@@ -63,5 +63,3 @@
   </div>
 </div>
 </body>
-
-
