--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/cart/cart-list/cart-list.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/cart/cart-list/cart-list.component.html
@@ -1,5 +1,4 @@
-<body>
-
+<body style="height: 100vh">
 <div class="small-container cart-page">
   <table>
     <tr>
@@ -12,7 +11,7 @@
     <tr>
       <td>
         <div class="cart-info">
-          <img src="../../../assets/img/Nike-2-removebg-preview.png"/>
+          <img src="../../../assets/img/Nike-2.jpg"/>
           <div>
             <p>Nike TF 1</p>
             <small>3.650.000đ</small><br>
@@ -28,7 +27,8 @@
     <tr>
       <td>
         <div class="cart-info">
-          <img src="../../../assets/img/Nike-3-removebg-preview.png"/>
+          <img src="../../../assets/img/Nike-3.jpg"/>
+
           <div>
             <p>Nike TF 2</p>
             <small>2.650.000đ</small><br>
@@ -44,7 +44,8 @@
     <tr>
       <td>
         <div class="cart-info">
-          <img src="../../../assets/img/Nike-4-removebg-preview.png"/>
+          <img src="../../../assets/img/Nike-4.jpg"/>
+
           <div>
             <p>Nike TF 3</p>
             <small>1.650.000đ</small><br>
