--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
@@ -25,140 +25,156 @@
   </div>
 </div>
 
-<div class="my-container" style="margin: auto">
   <div class="row">
-  <div class="card col-3">
-    <div class="imgBx">
-      <img src="../../../assets/img/Nike-1-removebg-preview.png" class="zoom"/></div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-<a routerLink="/home/detail">
-  <div class="card col-3">
-    <div class="imgBx">
-      <img src="../../../assets/img/Nike-2-removebg-preview.png"/></div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-</a>
-  <div class="card col-3">
-    <div class="imgBx">
-      <img src="../../../assets/img/Nike-3-removebg-preview.png"/></div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-
-  <div class="card col-3">
-    <div class="imgBx">
-      <img src="../../../assets/img/Nike-4-removebg-preview.png"/>
-    </div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-
-  <div class="card col-3">
-    <div class="imgBx">
-
-      <img src="../../../assets/img/Nike-5-removebg-preview.png"/>
-    </div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-
-  <div class="card col-3">
-    <div class="imgBx">
-
-      <img src="../../../assets/img/Nike-6-removebg-preview.png"/></div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-
-  <div class="card col-3">
-    <div class="imgBx">
-      <img src="../../../assets/img/Nike-2-removebg-preview.png"/></div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-
-  <div class="card col-3">
-    <div class="imgBx">
-      <img src="../../../assets/img/Nike-2-removebg-preview.png"/></div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
-
-  <div class="card col-3">
-    <div class="imgBx">
-      <img src="../../../assets/img/Nike-2-removebg-preview.png"/></div>
-    <div class="my-content">
-      <h2>NIKE</h2>
-      <p>poi óad đán oadsnu ádh adjabk a adjandln adkn
-        andkanda ándàoai nàn ầnd adâd a</p>
-    </div>
-  </div>
+<div class="card col-3">
+  <a routerLink="/home/detail">
+<div class="my-card" style="margin-left: 60px">
+  <img src="../../../assets/img/Nike-2.jpg" class="my-card-img"/>
+  <div class="my-card-body">
+<h1 class="my-card-title">NIKE  F1</h1>
+    <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+    <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+    <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
   </div>
 </div>
 
-  <div class="offer">
-    <div class="small-container">
-      <div class="row">
-        <div class="col-2">
+  </a>
+</div>
 
-          <img src="../../../assets/img/Nike-16-removebg-preview.png" class="offer-img"/></div>
-        <div class="col-2">
-          <h1>NIKE BRAND F1</h1>
-          <small>Được tạo ra cho gỗ cứng nhưng được sử dụng trên đường phố,
-            Dunk Low cổ điển của chúng tôi trở lại với lớp phủ sắc nét và đồ họa Nike cổ điển.
-            Biểu tượng bóng rổ này truyền cảm hứng của thập niên 90 với sự kết hợp giữa áo ba lỗ
-            và áo jersey ở phần trên mềm mại, thoải mái và bền bỉ. Công nghệ giày dép hiện đại giúp mang
-            lại sự thoải mái trong thế kỷ 21.</small><br>
-          <a href="#" class="btn">Mua Ngay &#8594;</a>
+<div class="card col-3">
+  <div class="my-card" style="margin-left: 60px">
+    <img src="../../../assets/img/Nike-3.jpg" class="my-card-img"/>
+    <div class="my-card-body">
+      <h1 class="my-card-title">NIKE  F1</h1>
+      <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+      <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+      <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
+    </div>
+  </div>
+</div>
+
+<div class="card col-3">
+  <div class="my-card" style="margin-left: 60px">
+    <img src="../../../assets/img/Nike-4.jpg" class="my-card-img"/>
+    <div class="my-card-body">
+      <h1 class="my-card-title">NIKE  F1</h1>
+      <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+      <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+      <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
+    </div>
+  </div>
+</div>
+
+    <div class="card col-3">
+      <div class="my-card" style="margin-left: 60px">
+        <img src="../../../assets/img/Nike-2.jpg" class="my-card-img"/>
+        <div class="my-card-body">
+          <h1 class="my-card-title">NIKE  F1</h1>
+          <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+          <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+          <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="brands">
-    <div class="small-container">
-      <div class="row">
-        <div class="col-5">
-          <img src="../../../assets/img/logo-godrej.png"/>
-        </div>
-        <div class="col-5">
-          <img src="../../../assets/img/logo-oppo.png"/></div>
-        <div class="col-5">
-          <img src="../../../assets/img/logo-paypal.png"/></div>
-        <div class="col-5">
-          <img src="../../../assets/img/logo-philips.png"/></div>
-        <div class="col-5">
-          <img src="../../../assets/img/logo-coca-cola.png"/>
+    <div class="card col-3">
+      <div class="my-card" style="margin-left: 60px">
+        <img src="../../../assets/img/Nike-3.jpg" class="my-card-img"/>
+        <div class="my-card-body">
+          <h1 class="my-card-title">NIKE  F1</h1>
+          <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+          <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+          <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
         </div>
       </div>
     </div>
+
+    <div class="card col-3">
+      <div class="my-card" style="margin-left: 60px">
+        <img src="../../../assets/img/Nike-4.jpg" class="my-card-img"/>
+        <div class="my-card-body">
+          <h1 class="my-card-title">NIKE  F1</h1>
+          <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+          <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+          <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="card col-3">
+      <div class="my-card" style="margin-left: 60px">
+        <img src="../../../assets/img/Nike-2.jpg" class="my-card-img"/>
+        <div class="my-card-body">
+          <h1 class="my-card-title">NIKE  F1</h1>
+          <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+          <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+          <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="card col-3">
+      <div class="my-card" style="margin-left: 60px">
+        <img src="../../../assets/img/Nike-3.jpg" class="my-card-img"/>
+        <div class="my-card-body">
+          <h1 class="my-card-title">NIKE  F1</h1>
+          <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+          <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+          <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="card col-3">
+      <div class="my-card" style="margin-left: 60px">
+        <img src="../../../assets/img/Nike-4.jpg" class="my-card-img"/>
+        <div class="my-card-body">
+          <h1 class="my-card-title">NIKE  F1</h1>
+          <h4 style="margin-left: 10px; color: black; padding-top: 20px">2.150.000đ</h4>
+          <p class="my-card-subtitle">Thể hiện sự hài hòa giữa các chất liệu</p>
+          <button class="my-card-btn" style="margin-left: 10px">Mua ngay</button>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+<div class="offer">
+  <div class="small-container">
+    <div class="row">
+      <div class="col-2">
+
+        <img src="../../../assets/img/Nike-16-removebg-preview.png" class="offer-img"/></div>
+      <div class="col-2">
+        <h1>NIKE BRAND F1</h1>
+        <small>Được tạo ra cho gỗ cứng nhưng được sử dụng trên đường phố,
+          Dunk Low cổ điển của chúng tôi trở lại với lớp phủ sắc nét và đồ họa Nike cổ điển.
+          Biểu tượng bóng rổ này truyền cảm hứng của thập niên 90 với sự kết hợp giữa áo ba lỗ
+          và áo jersey ở phần trên mềm mại, thoải mái và bền bỉ. Công nghệ giày dép hiện đại giúp mang
+          lại sự thoải mái trong thế kỷ 21.</small><br>
+        <a href="#" class="btn">Mua Ngay &#8594;</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="brands">
+  <div class="small-container">
+    <div class="row">
+      <div class="col-5">
+        <img src="../../../assets/img/logo-godrej.png"/>
+      </div>
+      <div class="col-5">
+        <img src="../../../assets/img/logo-oppo.png"/></div>
+      <div class="col-5">
+        <img src="../../../assets/img/logo-paypal.png"/></div>
+      <div class="col-5">
+        <img src="../../../assets/img/logo-philips.png"/></div>
+      <div class="col-5">
+        <img src="../../../assets/img/logo-coca-cola.png"/>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
