--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
@@ -3,34 +3,39 @@
     <div class="row">
       <div class="footer-col-1">
         <h3>Tải App Ở Điện Thoại</h3>
-        <p>Có thể tải App ở Android hoặc Iphone</p>
+        <div class="app-logo">
+        <img src="../../../assets/img/app-store.png"/>
+        <img src="../../../assets/img/play-store.png"/>
+        </div>
       </div>
       <div class="footer-col-2">
         <img src="../../../assets/img/logo-white.png"/>
-        <p>Có thể tải App ở Android hoặc Iphone</p>
+        <p>Tọa lạc tại 280, Đường Trần Hưng Đạo
+          An Hải, An Hải Tây, Sơn Trà, Đà Nẵng.<br>
+          Số điện liên hệ: 0123456789.</p>
       </div>
-
       <div class="footer-col-3">
-        <h3>Liên Hệ Với Chúng Tôi</h3>
-        <ul>
-          <li>Abcdef</li>
-          <li>Abcdef</li>
-          <li>Abcdef</li>
-          <li>Abcdef</li>
+        <h3>Được Ủy Quyền Bởi</h3>
+        <ul style="padding-right: 30px">
+          <li>Nike Company</li>
+          <li>Adidas Company</li>
+          <li>Converse Company</li>
+          <li>Louis Vuitton</li>
         </ul>
       </div>
 
       <div class="footer-col-4">
         <h3>Theo Dõi Chúng Tôi</h3>
-        <ul>
+        <ul style="padding-right: 30px">
           <li>Facebook</li>
-          <li>Instagram</li>
-          <li>Zalo</li>
           <li>Tiktok</li>
+          <li>Instagram</li>
+          <li>Youtube</li>
         </ul>
       </div>
-
     </div>
+    <hr>
+    <p class="copyright">Copyright 2023 - Phan Tuấn Linh</p>
   </div>
 
 </div>
