--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.html
@@ -1,7 +1,8 @@
 <div class="small-container single-product">
   <div class="row">
     <div class="col-2">
-      <img src="../../../assets/img/Nike-2-removebg-preview.png" width="100%"/></div>
+      <img src="../../../assets/img/Nike-2.jpg" width="85%" height="85%"/>
+    </div>
     <div class="col-2">
       <h1>Nike Brand F1</h1>
       <h3 style="color: red">2.650.000đ</h3>
