--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/security/login/login.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/security/login/login.component.html
@@ -13,7 +13,7 @@
     <!-- Login Form -->
     <form>
       <input type="text" id="login" class="fadeIn second" name="login" placeholder="Tài khoản">
-      <input type="text" id="password" class="fadeIn third" name="login" placeholder="Mật khẩu">
+      <input type="password" id="password" class="fadeIn third" name="login" placeholder="Mật khẩu">
       <input type="submit" class="fadeIn fourth" value="Đăng nhập">
     </form>
 
