--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
@@ -72,8 +72,16 @@ small{
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
+
+
+@media (max-width:700px) {
+  .row{
+    flex-direction: column;
+  }
+}
+
 .category {
   margin: 70px 0;
 }
@@ -112,65 +120,6 @@ select{
 select:focus{
   outline: none;
 }
-.my-container{
-  position: relative;
-  width: 1100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 30px;
-}
-.my-container .card{
-  position: relative;
-  max-width: 300px;
-  height: 215px;
-  background: #fff;
-  margin: 30px 10px;
-  padding: 20px 15px;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0 5px 202px rgba(0,0,0,0.5);
-  transition: 0.3s ease-in-out;
-  border-radius: 15%;
-}
-.my-container .card:hover{
-  height: 420px;
-
-}
-
-.my-container .card .imgBx{
-  position: relative;
-  width: 260px;
-  height: 260px;
-  top: -60px;
-  left: 20px;
-  z-index: 1;
-  box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-  border-radius: 15%;
-
-}
-.my-container .card .imgBx img{
-  max-width: 100%;
-border-radius: 4px;
-}
-.my-container .card .my-content{
-  position: relative;
-  margin-top: -140px;
-  padding: 10px 15px;
-  text-align: center;
-  color: #111;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.3s ease-in-out;
-}
-.my-container .card:hover .my-content{
-  visibility: visible;
-  opacity: 1;
-  margin-top: -40px;
-  transition-delay: 0.3s;
-}
-
 .brands{
   margin: 100px auto;
 }
@@ -196,3 +145,59 @@ border-radius: 4px;
 
 
 
+.my-card{
+  width: 270px;
+  height: 370px;
+  border-radius: 20px;
+  overflow: hidden;
+  border: 8px solid #fff;
+  position: relative;
+}
+.my-card-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+}
+.my-card-body{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: -100%;
+  position: absolute;
+  background: #1f3d4738;
+  backdrop-filter: blur(5px);
+  border-radius: 15px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: 1s;
+}
+.my-card:hover .my-card-body{
+  right: 0;
+}
+.my-card-title{
+  padding-left: 10px;
+  font-size: 50px;
+  font-weight: 500;
+}
+.my-card-subtitle{
+  text-transform: capitalize;
+  font-size: small;
+  font-weight: 300;
+  color: white;
+  padding: 20px 10px;
+}
+.my-card-btn{
+color: #fff;
+  background: #ff523b;
+  padding: 10px 20px;
+  width: 120px;
+  border-radius: 5px;
+  text-transform: capitalize;
+  border: none;
+  outline: none;
+  font-weight: 500;
+  cursor: pointer;
+}
