--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.css
@@ -43,6 +43,9 @@ list-style-type: none;
 .app-logo{
   width: 140px;
 }
+.app-logo img{
+  width: 140px;
+}
 .footer hr{
   border: none;
   background: #b5b5b5;
