--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/security/login/login.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/security/login/login.component.css
@@ -9,6 +9,7 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
+  /*background: radial-gradient(#fff, #e6d6ff);*/
 }
 
 a {
@@ -52,7 +53,7 @@ h2 {
   position: relative;
   padding: 0px;
   -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 30px 60px 0 rgba(9, 9, 9, 0.27);
   text-align: center;
 }
 
@@ -146,6 +147,36 @@ input[type=text]::placeholder {
   color: #cccccc;
 }
 
+
+input[type=password] {
+  background-color: #f6f6f6;
+  border: none;
+  color: #0d0d0d;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px;
+  width: 85%;
+  border: 2px solid #f6f6f6;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+input[type=password]:focus {
+  background-color: #fff;
+  border-bottom: 2px solid #5fbae9;
+}
+
+input[type=password]::placeholder {
+  color: #cccccc;
+}
 /* ANIMATIONS */
 
 /* Simple CSS3 Fade-in-down Animation */
